--- a/DotNetArcs.csproj
+++ b/DotNetArcs.csproj
@@ -9,7 +9,7 @@
     <PackageId>DotNetArcs</PackageId>
     <Authors>VSS-DEV Team</Authors>
     <RootNamespace>DotNetArcs</RootNamespace>
-    <Version>2.0.0.12</Version>
+    <Version>2.1.0.32-alpha.1</Version>
     <Description>library for Deflate and ZLIB compression.\r\nDino Chiesa make Ionic.Zlib sourse</Description>
     <RepositoryUrl>https://github.com/VSS-DEV/DotNetArcs</RepositoryUrl>
     <PackageTags>Ionic.Zlib,Zlib</PackageTags>
