--- a/DotNetArcs.csproj
+++ b/DotNetArcs.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <AssemblyName>DotNetArcs</AssemblyName>
     <GenerateAssemblyInfo>True</GenerateAssemblyInfo>
-    <TargetFrameworks>netstandard2.1;net46;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup>
